Added listview and testdata

--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -3,11 +3,11 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" >   
-       <TextView
-        android:id="@+id/textView_Service"
+       
+       <TextView style="@android:style/TextAppearance.Widget.TextView" 
+        android:id="@+id/textView_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="11dip" />
-      
+        />
        
 </LinearLayout>
