--- a/res/xml/widget_info.xml
+++ b/res/xml/widget_info.xml
@@ -5,5 +5,5 @@
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="180000"
     android:initialLayout="@layout/widget_layout"
-    android:configure="com.SysAdmin.Activity.WidgetConfigure_Server">
+    android:configure="com.SysAdmin.Activity.CheckServerActivity">
 </appwidget-provider>
