--- a/res/layout/exp_list_child.xml
+++ b/res/layout/exp_list_child.xml
@@ -1,11 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android" 
-    android:id="@+id/textChildItem" 
-    android:layout_width="fill_parent" 
-    android:layout_height="?android:attr/listPreferredItemHeight" 
-    android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft" 
-    android:textAppearance="?android:attr/textAppearanceLarge" 
-    android:gravity="center_vertical"
-    android:textColor="#AAAAAA"/>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout_widget_relative"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent" >
+        
+	<TextView 
+	    android:id="@+id/textChildItem" 
+	    android:layout_width="fill_parent" 
+	    android:layout_height="?android:attr/listPreferredItemHeight" 
+	    android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft" 
+	    android:textAppearance="?android:attr/textAppearanceLarge" 
+	    android:textColor="@android:color/holo_green_light"
+	    android:layout_alignParentLeft="true"
+	    />
+	
+	<CheckBox 
+	    android:id="@+id/checkBox_ChildItem"
+	    android:layout_height="wrap_content"
+	    android:layout_width="wrap_content"
+	    android:layout_alignParentRight="true"/>
 
-    
+</RelativeLayout>    
