--- a/res/layout/exp_list_child.xml
+++ b/res/layout/exp_list_child.xml
@@ -9,15 +9,16 @@
 	    android:layout_width="fill_parent" 
 	    android:layout_height="?android:attr/listPreferredItemHeight" 
 	    android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft" 
-	    android:textAppearance="?android:attr/textAppearanceLarge" 
+	    android:textAppearance="@android:style/TextAppearance.Holo.Medium" 
 	    android:textColor="@android:color/holo_green_light"
 	    android:layout_alignParentLeft="true"
-	    />
+	    android:gravity="center_vertical" />
 	
 	<CheckBox 
 	    android:id="@+id/checkBox_ChildItem"
 	    android:layout_height="wrap_content"
 	    android:layout_width="wrap_content"
-	    android:layout_alignParentRight="true"/>
+	    android:layout_alignParentRight="true"
+	    android:gravity="center_vertical" />
 
 </RelativeLayout>    
