--- a/res/layout/configuration.xml
+++ b/res/layout/configuration.xml
@@ -5,6 +5,27 @@
         android:orientation="vertical"
         android:gravity="center_vertical|center_horizontal" >
     
+    	<LinearLayout
+        	android:layout_width="240dp"
+        	android:layout_height="wrap_content">
+    
+        	<TextView        		
+        		android:layout_width="wrap_content"
+        		android:layout_height="wrap_content"
+        		android:text="@string/textView_Host"
+        		android:textAppearance="?android:attr/textAppearanceLarge" />
+        	    
+    		<EditText
+        		android:id="@+id/editText_Host"
+        		android:layout_width="match_parent"
+        		android:hint="@string/editText_Host"
+        		android:inputType="textUri"
+       			android:layout_height="wrap_content">
+        		<requestFocus />
+    		</EditText>
+    		
+    	</LinearLayout>
+    
         <LinearLayout
         	android:layout_width="240dp"
         	android:layout_height="wrap_content">
