--- a/res/layout/conclusion.xml
+++ b/res/layout/conclusion.xml
@@ -10,6 +10,13 @@
 	    android:layout_alignParentTop="true"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
+	    android:id="@+id/textView_Conclusion_URL"/>
+	
+	<TextView style="@android:style/TextAppearance.Holo.Medium"
+	    android:padding="10dp"
+	    android:layout_below="@id/textView_Conclusion_URL"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
 	    android:id="@+id/textView_Conclusion_Hostname"/>
 	
 	<TextView style="@android:style/TextAppearance.Holo.Medium"
